styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');

body {
    
    background-color: #f3f5fc;
}
.container {
    margin: 0 auto;
    background-color: #f3f5fc;
    width: 1440px;
    display: flex;
    flex-direction: row;
}

.logo {
    margin-left: 40px;
}

.logo > img {
    margin-top: 40px;
    width: 120px;
}

.formulario {
    margin-left: 80px;
}

.formulario > textarea {
    background-color: #f3f5fc;
    margin-top: 168px;
    width: 680px;
    height: 610px;
    font-family: "Inter", sans-serif;
    font-weight: 400;
    font-size: 48px;
    color: #0A3871;
    border: none;
}

textarea:focus {
    outline: none;
}

.info {    
    padding-left: 20px;
    height: 18px;
    font-family: "Inter", sans-serif;
    font-weight: 400;
    font-size: 12px;
    color: #495057;
}
.resultado {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-left: 80px;
}

.resultado__textoCriptografado {
    background-color: white;
    margin-top: 40px;
    padding: 40px;
    width: 400px;
    height: 650px;
    font-family: "Inter", sans-serif;
    font-weight: 400;
    font-size: 24px;
    color: #495057;
    border-radius: 32px;
}

textarea:focus {
    outline: none;
}

button {
    background-color: #f3f5fc;
    margin-top: 8px;
    width: 328px;
    height: 67px;
    font-family: "Inter", sans-serif;
    font-weight: 400;
    font-size: 20px;
    color: #0A3871;
    border: 1px solid #0A3871;
    border-radius: 24px;
    cursor: pointer;
}

.btn_criptografar:hover {
    transform: rotateY(180deg);
}

.btn_descriptografar {
    transform: rotateY(180deg);
}

.btnCopiar:hover {
    background-color: #ffffff;
    /* color: white; */
}

.btn_descriptografar:hover {
    transform: rotateY(0deg);
}

.botoes-cripto{
    display: flex;
    justify-content: space-between;
}

.btn_criptografar {
    background-color: #0A3871;
    color: white;
}


footer {
    width: 1440px;
    margin: 50px auto;
    font-family: "Inter", sans-serif;
    font-weight: 400;
    font-size: 24px;
    display: flex;
    justify-content: center;
}

